--- a/assets/index.css
+++ b/assets/index.css
@@ -1,156 +1,171 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Rock Salt', cursive;
-    letter-spacing: .1rem;
-    word-spacing: .5rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Rock Salt", cursive;
+  letter-spacing: 0.1rem;
+  word-spacing: 0.5rem;
 }
-html, header{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+html,
+header {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+    "navbar-content "
+    "carousel-slide "
+    "artist-subcontainer "
+    "footer ";
+  width: 100%;
+  height: 100%;
+}
+.navbar-content {
+  grid-area: navbar-content;
+  background-color: aliceblue;
+}
+.carousel-slide {
+  grid-area: carousel-slide;
+  background-color: aliceblue;
+}
+.artist-subcontainer {
+  grid-area: artist-subcontainer;
+  background-color: aliceblue;
+  display: grid;
+  grid-template-columns: repeat(auto, 1fr);
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "card1 card2 card3 card4"
+    "card5 card6 card7 card8";
+  gap: 1rem;
+  width: 100%;
+}
+
+.artist-container {
+  width: 100%;
+}
+footer {
+  grid-area: footer;
+  background-color: aliceblue;
 }
 /* carousel */
 .carousel-item {
-	height: 100vh;
-	min-height: 300px;
+  height: 100%;
+  min-height: 300px;
 }
 p {
-    word-spacing: normal;
-    letter-spacing: normal;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  word-spacing: normal;
+  letter-spacing: normal;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 .carousel-caption {
-	bottom: 220px;
-	z-index: 2;
+  bottom: 220px;
+  z-index: 2;
 }
 .carousel-caption h5 {
-	font-size: 45px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-top: 25px;
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
 }
 .carousel-caption p {
-	width: 60%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
 }
 .carousel-inner:before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.7);
-	z-index: 1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
 /* navbar */
 .navbar .getstarted {
-	background: #106eea;
-	margin-left: 30px;
-	border-radius: 4px;
-	font-weight: 400;
-	color: #fff;
-	text-decoration: none;
-	padding: .5rem 1rem;
-	line-height: 2.3;
+  background: #106eea;
+  margin-left: 30px;
+  border-radius: 4px;
+  font-weight: 400;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  line-height: 2.3;
 }
-#banner-img{
-        background-image: url(../assets/tattooimages/pexels-adrian-boustead-955938.jpg);
-        height: 85vh;
-        width: 100vw;
-        background-size: cover;
+#banner-img {
+  background-image: url(../assets/tattooimages/pexels-adrian-boustead-955938.jpg);
+  height: 85vh;
+  width: 100vw;
+  background-size: cover;
 }
-.bardesign{
-    border: 2px;
-    height: 5px;
-    background: #e78f09;
+.bardesign {
+  border: 2px;
+  height: 5px;
+  background: #e78f09;
 }
-.navbar .container img{
-    height: 100px;
-    width: 200px;   
+.navbar .container img {
+  height: 100px;
+  width: 200px;
 }
-.navbar .container img:hover{
-    opacity: 0.7;
+.navbar .container img:hover {
+  opacity: 0.7;
 }
-.navbar-nav .nav-item:hover{
-    text-shadow: 2px 3px #e78f09;
-    transition: 0.6s;
+.navbar-nav .nav-item:hover {
+  text-shadow: 2px 3px #e78f09;
+  transition: 0.6s;
 }
-.content p{
-    text-align: center;
-    position: relative;
-    font-family: 'Rock Salt', cursive;
-    font-size: 40px; 
-    font-weight: 900; 
+.content p {
+  text-align: center;
+  position: relative;
+  font-family: "Rock Salt", cursive;
+  font-size: 40px;
+  font-weight: 900;
 }
-.content p:hover{
-    text-shadow: 4px 5px #e78f09;
-    transition: 0.6s;
+.content p:hover {
+  text-shadow: 4px 5px #e78f09;
+  transition: 0.6s;
 }
 .navbar-nav {
-    text-align: center;
-}
-footer{
-    max-width: 100%;
-    margin-top: 80px;
-}
-.fa{
-    margin-right: 5px;
-}
-.artist .container{
-    margin-bottom: 50px;
+  text-align: center;
 }
 
-    @media only screen and (min-width: 768px) and (max-width: 991px) {
-        .navbar-nav {
-            text-align: center;
-            background-color: #555555;
-        }
-        .carousel-caption {
-            bottom: 370px;
-        }
-        .carousel-caption p {
-            width: 100%;
-        }
-        .card {
-            margin-bottom: 30px;
-        }
-        .img-area img {
-            width: 100%;
-        }
-    }
-    @media only screen and (max-width: 767px) {
-        .navbar-nav {
-            text-align: center;
-            background-color: #555555;
-        }
-        .carousel-caption {
-            bottom: 125px;
-        }
-        .carousel-caption h5 {
-            font-size: 17px;
-        }
-        .carousel-caption a {
-            padding: 10px 15px;
-            font-size: 15px;
-        }
-        .carousel-caption p {
-            width: 100%;
-            line-height: 1.6;
-            font-size: 12px;
-        }
-        .about-text {
-            padding-top: 50px;
-        }
-        .card {
-            margin-bottom: 30px;
-        }
-    }
-    
+footer {
+  max-width: 100%;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+@media (max-width: 768px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "navbar-content "
+      "carousel-slide "
+      "artist-subcontainer "
+      "footer ";
+    width: 100%;
+    height: 100%;
+  }
+  .artist-subcontainer {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "card1" "card2" "card3" "card4"
+      "card5" "card6" "card7" "card8";
+    gap: 1rem;
+    padding: 2rem;
+    margin: auto;
+  }
+}
