--- a/assets/artists.css
+++ b/assets/artists.css
@@ -1,77 +1,76 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-  html, header{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+html,
+header {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 .text-center {
-    position: relative;
-  }
-  
+  position: relative;
+}
+
 :root {
   --fs-xsl: clamp(3.5rem, 3vw + 1rem, 12rem);
   --fs-600: 2rem;
-  --fs-400: .8rem;
+  --fs-400: 0.8rem;
 }
-  .text-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fcbf07 ;
-    background-color: transparent;
-    padding: 1rem;
-    font-family: 'Rock Salt', cursive;
-  }
-  
-.bardesign{
-    border: 2px;
-    height: 5px;
-    background: #e78f09;
+.text-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fcbf07;
+  background-color: transparent;
+  padding: 1rem;
+  font-family: "Rock Salt", cursive;
 }
-div h1:hover{
-    text-shadow: 4px 5px #e78f09;
-    transition: 0.6s;
+
+.bardesign {
+  border: 2px;
+  height: 5px;
+  background: #e78f09;
+}
+div h1:hover {
+  text-shadow: 4px 5px #e78f09;
+  transition: 0.6s;
 }
 .nav-item {
-  font-family: 'Rock Salt', cursive;
+  font-family: "Rock Salt", cursive;
 }
-.navbar .container img{
-    height: 100px;
-    width: 200px;   
+.navbar .container img {
+  height: 100px;
+  width: 200px;
 }
-.navbar .container img:hover{
-    opacity: 0.7;
-    
+.navbar .container img:hover {
+  opacity: 0.7;
 }
-.navbar-nav .nav-item:hover{
-    text-shadow: 2px 3px #e78f09;
-    transition: 0.6s;
+.navbar-nav .nav-item:hover {
+  text-shadow: 2px 3px #e78f09;
+  transition: 0.6s;
 }
-.content p{
+.content p {
   text-align: center;
   position: relative;
   font-size: var(--fs-600);
   font-weight: 900;
 }
-.content p:hover{
-    text-shadow: 4px 5px #e78f09;
+.content p:hover {
+  text-shadow: 4px 5px #e78f09;
 }
 
-  #text2 {
-    font-family: 'Gill Sans';  
-  }
+#text2 {
+  font-family: "Gill Sans";
+}
 /* footer text */
 .text-white {
-  font-family: 'Rock Salt', cursive;
+  font-family: "Rock Salt", cursive;
 }
 
 /* new effect */
@@ -81,18 +80,18 @@ a {
   text-decoration: none;
 }
 .profile-area {
-  padding: 80px 0; 
+  padding: 80px 0;
   display: flex;
 }
 .card {
   box-shadow: 0 0 1rem rgba(0, 0, 0, 5);
   overflow: hidden;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
 }
 .img1 img {
   height: 10rem;
-  border-top-right-radius: .5rem;
-  border-top-left-radius: .5rem;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
   width: 100%;
 }
 .img2 img {
@@ -100,12 +99,12 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
- z-index: 1;
- width: 140px;
- height: 140px;
- border-radius: 50%;
- border: 7px solid #fff;
- margin-top: -80px;
+  z-index: 1;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  border: 7px solid #fff;
+  margin-top: -80px;
 }
 .card:hover .img2 img {
   border-color: rgb(26, 101, 13);
@@ -134,22 +133,21 @@ a {
   color: darkcyan;
   padding: 0 10px;
 }
-  @media (max-width: 576px) {
-    .card-deck {
-      flex-flow: row wrap;
-      justify-content: space-between;
-    }
-    .nav-item {
-      font-size: var(--fs-400);
-    }
-    .text-white {
-      font-size: var(--fs-400);
-    }
-   #text2 {
-      font-size: var(--fs-400);
-    }
-    p {
-      font-size: var(--fs-400);
-    }
-   }
-   
+@media (max-width: 576px) {
+  .card-deck {
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .nav-item {
+    font-size: var(--fs-400);
+  }
+  .text-white {
+    font-size: var(--fs-400);
+  }
+  #text2 {
+    font-size: var(--fs-400);
+  }
+  p {
+    font-size: var(--fs-400);
+  }
+}
