--- a/assets/shop.css
+++ b/assets/shop.css
@@ -1,67 +1,65 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Rock Salt', cursive;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Rock Salt", cursive;
 }
-html, header{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
+html,
+header {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 .banner-image {
-    background: url(../assets/tattooimages/pexels-adrian-boustead-955938.jpg);
-    background-size: cover;
+  background: url(../assets/tattooimages/pexels-adrian-boustead-955938.jpg);
+  background-size: cover;
 }
-.bardesign{
-    border: 2px;
-    height: 5px;
-    background: #e78f09;
+.bardesign {
+  border: 2px;
+  height: 5px;
+  background: #e78f09;
 }
-.content p{
-    text-align: center;
-    position: relative;
-    font-family: 'Rock Salt', cursive;
-    font-size: 40px; 
-    font-weight: 900; 
+.content p {
+  text-align: center;
+  position: relative;
+  font-family: "Rock Salt", cursive;
+  font-size: 40px;
+  font-weight: 900;
 }
-.content p:hover{
-    text-shadow: 4px 5px #e78f09;
-    transition: 0.6s;
+.content p:hover {
+  text-shadow: 4px 5px #e78f09;
+  transition: 0.6s;
 }
-.navbar .container img{
-    height: 100px;
-    width: 200px;   
+.navbar .container img {
+  height: 100px;
+  width: 200px;
 }
-.navbar .container img:hover{
-    opacity: 0.7;
+.navbar .container img:hover {
+  opacity: 0.7;
 }
-.navbar-nav .nav-item:hover{
-    text-shadow: 2px 3px #e78f09;
-    transition: 0.6s;
+.navbar-nav .nav-item:hover {
+  text-shadow: 2px 3px #e78f09;
+  transition: 0.6s;
 }
-.thumbnail{
-    display: inline-block;
-    width: 300px;
-    height: 400px;
-    margin: 10px 5px 20px 20px;
-    transition: 1s;
+.thumbnail {
+  display: inline-block;
+  width: 300px;
+  height: 400px;
+  margin: 10px 5px 20px 20px;
+  transition: 1s;
 }
-.thumbnail:hover{
-    transform: scale(1.1);
-    z-index: 2;
+.thumbnail:hover {
+  transform: scale(1.1);
+  z-index: 2;
 }
 .card-text {
-    font-family: 'Poppins', sans-serif;
-    font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
 }
-#fontcare h1{
-    font-size: 40px;
-    font-family: fantasy;
-    margin: 20px 0px 0px 30px;
+#fontcare h1 {
+  font-size: 40px;
+  font-family: fantasy;
+  margin: 20px 0px 0px 30px;
 }
-
-
-
